--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -6,16 +6,16 @@ knitr::opts_chunk$set(comment = "")
 
 The `{golem}` [@R-golem] package is a framework for building production-grade Shiny Application. 
 Lot of the patterns and methodologies described in this book are linked to `{golem}` and packages from the [golemverse](http://golemverse.org/).
-Of course, all the advices developed in this book will still be valid even if you are not planning on using `{golem}`.
+Of course, all the advice developed in this book will still be valid even if you are do not plan to use `{golem}`.
 
-We have quickly introduced `{golem}` in the last chapter, and we will come back to this package from time to time in the following chapters. 
+We have quickly introduced `{golem}` in the last chapter, and we will come back to this package many times in the following chapters. 
 So, let's start with an introduction to this package. 
 Note that the version used at the time of writing this book is `r packageVersion("golem")`.
 
 ## What is `{golem}`?
 
-`{golem}` can be thought as a toolkit for simplifying the creation, development and deployment of a Shiny application. 
-It's focused on building applications that will be sent to production, but of course starting with `{golem}` from the very beginning is also possible, even recommended: it is easier to start with `{golem}` than to refactor your all codebase to fit into the framework.
+`{golem}` is a toolkit for simplifying the creation, development and deployment of a Shiny application. 
+It's focused on building applications that will be sent to production, but of course starting with `{golem}` from the very beginning is also possible, even recommended: it is easier to start with `{golem}` than to refactor your codebase to fit into the framework.
 
 The stable release can be found on CRAN and is installed with:
 
@@ -29,7 +29,7 @@ install.packages("golem")
 remotes::install_github("Thinkr-open/golem")
 ```
 
-The version of the package on CRAN at the time of writting this book is: 
+The version of the package on CRAN at the time of writing this book is: 
 
 ```{r 04-golem-4 }
 library(dplyr, warn.conflicts = FALSE)
@@ -47,7 +47,7 @@ desc::desc_get_version(x)
 ```
 
 
-The motivation behind `{golem}` is that building a proof-of-concept application is easy, but things change when the application becomes larger and more complex, and especially when you need to send that app to production. 
+The motivation behind `{golem}` is that building a Proof of Concept application is easy, but things change when the application becomes larger and more complex, and especially when you need to send that app to production. 
 Until recently there has not been any real framework for building and deploying production-grade Shiny Apps.
 This is where `{golem}` comes into play: offering Shiny developers a toolkit for making a stable, easy-to-maintain, and robust production web application with R. 
 `{golem}` has been developed to abstract away the most common engineering tasks (for example, module creation, addition and linking of external CSS or JavaScript file, ...), so you can focus on what matters: building the application. 
@@ -114,9 +114,9 @@ The `R/` folder is the standard folder where you will store all your app functio
 When you start your project with `{golem}`, this folder is pre-populated with three `.R` files: `app_server.R`, `app_ui.R` and `run_app.R`.
 
 During the process of building your application, all the core functionalities  of your app will be stored in the `R/` directory.
-Note that these files are the "core" functionalities of your application itself, and that other .R files also exists.
+Note that these files are the "core" features of your application itself, and that other .R files also exists.
 For example, when you will need to deploy your application on RStudio platforms, `{golem}` will create an `app.R` at the root of your directory
-^[`{golem}` wîll automatically add this file to the `.Rbuildignore` file.]
+^[`{golem}` will automatically add this file to the `.Rbuildignore` file.]
 . 
 This file should not go into the `R/` folder, as it is not in the core of the package mechanic. 
 The `dev/` folder also contains `.R` scripts, and they are inside this folder as they should not live inside the `R/` folder: they are utilitarian files for development, not core functionalities of your application.
@@ -137,7 +137,7 @@ readLines("golex/R/app_server.R") %>%
 ```
 
 The `app_server.R` file contains the function for the server logic. 
-If you are familiar with the classic 'ui.R / server.R' methodology, this function can be seen as a replacement for the contents of the function you have in your `server.R`. 
+If you are familiar with the classic 'ui.R / server.R' methodology, this function can be seen as a replacement for the content of the function you have in your `server.R`. 
 
 Building a complex Shiny application commonly implies using Shiny modules. 
 If so, you will be adding there a series of `callModule()`, the ones you will get on the very bottom of the file created with `golem::add_module()`.
@@ -322,6 +322,8 @@ This is what `golem_add_external_resources()` is made for: linking the external 
 + `golem::add_css_file()`
 + `golem::add_js_file()`
 + `golem::add_js_handler()`
++ `golem::use_external_css_file()`
++ `golem::use_external_js_file()`
 + `golem::use_favicon()`
 
 Be aware that these files are available under the `www/` at __application run time__, _i.e._ that the `www/` folder is available by your browser, not by R when it runs/generates your application. 
@@ -333,7 +335,7 @@ If you want to link to a file that is read during __application generation__, yo
 The `dev/` folder is to be used as a notebook for your development process: you will find here a series of functions that can be used all along your project. 
 
 The content of these files are specific to `{golem}` here, but the concept of using a script to store all development steps is not restricted to a Shiny application: it could easily be done for any package, and this is something we recommend to do. 
-The functions inside these files are the ones used to do some setup, like `usethis::use_mit_license()` or `usethis::use_vignette("my-analysis")`, add testing infrastrucutre like `usethis::use_test("my-function")` or `devtools::check()`.
+The functions inside these files are the ones used to do some setup, like `usethis::use_mit_license()` or `usethis::use_vignette("my-analysis")`, add testing infrastructure like `usethis::use_test("my-function")` or `devtools::check()`.
 You will also find functions to populate the application like `golem::add_module("my-module")` or `golem::add_js_file("my-script")`.
 And finally, there are functions you will need once your application is ready: `pkgdown::build_site()`, `rhub::check_for_cran()` or `golem::add_dockerfile()`.
 
