--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -370,7 +370,7 @@ What is the point of having one big app for these three different tasks?
 Splitting this project into three smaller apps will keep you from having a large app which is harder to maintain, and that might be less performing.
 Indeed, if you put everything into the same app, you will have to add extra mechanisms to prevent the admin panel from loading if your user simply wants to go to the extraction step, and inversely: a user visiting the admin panel probably does not need the extraction and analysis back-end to be loaded when they simply want to browse the way other users have been using the app. 
 
-Or, as simply put in _The Art of Unix Programing_: 
+Or, as simply put in _The Art of Unix Programming_: 
 
 > Rule of Parsimony: Write a big program only when it is clear by demonstration that nothing else will do.
 
