--- a/07-step-by-step-design.Rmd
+++ b/07-step-by-step-design.Rmd
@@ -2,14 +2,14 @@
 
 ## Designing before coding
 
-> You have to believe that software design is a craft worth all the intelligence, creativity, and passion you can muster. Otherwise you will not look past the easy, stereotyped ways of approaching design and implementation; __you will rush into coding when you should be thinking__. You'll carelessly complicate when you should be relentlessly simplifying — and theyou willll wonder why your code bloats and debugging is so hard.
+> You have to believe that software design is a craft worth all the intelligence, creativity, and passion you can muster. Otherwise you will not look past the easy, stereotyped ways of approaching design and implementation; __you will rush into coding when you should be thinking__. You'll carelessly complicate when you should be relentlessly simplifying — and you will wonder why your code bloats and debugging is so hard.
 
 `r right_link("The Art of Unix Programming - Attitude Matters Too", "http://www.catb.org/~esr/writings/taoup/html/ch01s09.html")`
 
 ### The Urge to Code 
 
 At the moment you receive the specifications for your app, it is tempting to rush into coding.
-And that is perfectly normal: we're Shiny developer because we love building software, so as soon as a problem emerges, our brain starts thinking about technical implementation, packages, pieces of code, and all these things that we love to do when we are building an app.
+And that is perfectly normal: we're R developers because we love building software, so as soon as a problem emerges, our brain starts thinking about technical implementation, packages, pieces of code, and all these things that we love to do when we are building an application.
 
 But rushing into coding from the very beginning is not the safest way to go. 
 Focusing on technical details from the very beginning can make you miss the big picture, be it for the whole app if you are in charge of the project, or for the piece of the whole app you have been assigned to. 
@@ -18,14 +18,14 @@ Yes, we all have been in this situation: realizing too late that the thing we ha
 And what about "Oh I wish I had realized sooner that this package existed before trying to implement my own functions to do that!".
 Same thing: we're jumping straight into solving programming problem when someone else has open-sourced a solution to this very same problem. 
 
-Of course, implementing your own solution might be a good thing in specific cases: avoiding heavy dependencies, incompatible licensing, the joy of intellectual challenge... 
+Of course, implementing your own solution might be a good thing in specific cases: avoiding heavy dependencies, incompatible licensing, the joy of the intellectual challenge... 
 But when building production software, it is safer to go for an existing solution if it exists and fits in the project: existing packages/software that are widely used by the community and by the industry benefit from wider testing, wider documentation, and a larger audience if you need to ask questions.
 And of course, it saves time, be it immediately or in the long run: re-using an existing solution allows you to save time re-implementing it, so you save time today, but it also prevent you from having to detect and correct bugs, saving you time tomorrow
 ^[Of course, it is not an absolute rule: you might also inherit from the bug created by the open source solution.]
 .
 
-So, before rushing into coding, take some time to conceptualize your application / module on a piece of paper. 
-That will help you get the big picture for the piece of code you will be writing: what are the inputs, what are the outputs, what packages / services you can use inside your application, how it will fit in the rest of the project.
+So, before rushing into coding, take some time to conceptualize your application / modules on a piece of paper. 
+That will help you get the big picture of the piece of code you will be writing: what are the inputs, what are the outputs, what packages / services you can use inside your application, how it will fit in the rest of the project, and so on and so forth.
 
 ### Knowing where to search
 
@@ -48,7 +48,7 @@ Here are a non-exhaustive list of places you can look for if you are stuck/looki
 
 ### About Concept Map
 
-Using concept map to think about your app can be a valuable tool to help you grasp the big picture of your application.
+Using a concept map to think about your app can be a valuable method to help you grasp the big picture of your application.
 
 Concept maps are a widely used tool, be it in the software engineering world and in many other fields.
 The idea with concept maps is to take a piece of paper (or a digital tool), where you draw all the concepts that come to mind for a specific topic, and all the relationships that link these concepts together. 
@@ -69,12 +69,12 @@ The user can also export a `.hex` file, that can restore an app configuration.
 
 Once this general flow is written down, you can get back to it several times during the process of building the app, but it is also a perfect tool at the end to see if everything is in place: once the application is finished, we can question it: 
 
-+ Can we point to any concept and see that it is there? 
++ Can we point to any concept and confirm it's there? 
 + Can we look at every relationship and see they all work as expected? 
 
 Deciding which level of details you want to put in your concept map depends: "simple" applications probably do not need complex maps. 
 And that also depends on how precise the specifications are, and how many people are working on the project: the concept map is a valuable tool when it comes to communication, as it allows people involved in the project to have visual clues of the conceptual architecture of the application. 
-But beware: too complex maps are also unreadable!
+But beware: very complex maps are also unreadable!
 
 ## Ask questions
 
@@ -82,16 +82,16 @@ Before starting to code, the safe call will be to ask your team/client (dependin
 
 Here is a (non-exhaustive) list of information you might need along the way. 
 
-Side note: of course, these questions do not cover the core functionalities of the application: I'm pretty sure you have thought about covering this already. 
-These are more contextual questions which are not directly linked to the application itself  
+Side note: of course, these questions do not cover the core features of the application: we're pretty sure you have thought about covering this already. 
+These are more contextual questions which are not directly linked to the application itself, yet that can be useful down the line.
 
 ### About the end users 
 
-Who are the end users of your app?  
-Are they tech-literate?  
-In which context will they be using your app?  
-On what machines, and in what context?  
-Will they be using the app in their office, on their phone while driving a tractor, in a plant while wearing lab coats?  
+Who are the end users of your app?
+Are they tech-literate? 
+In which context will they be using your app? 
+On what machines?
+Will they be using the app in their office, on their phone while driving a tractor, in a plant, while wearing lab coats? 
 
 That might seems like weird questions if you are just focusing on the very technical side of the app implementation, but think about where the app will be used: the application used while driving agricultural machines might need less interactive things, bigger fonts, simpler interface, less details and more direct information. 
 If you are building a Shiny app for a team of sellers who are always on the road, chances are they will need an app that they can browse from their mobile. 
@@ -105,6 +105,7 @@ Do they actually need that much granularity in the information?
 Will they really see a `datatable` of 15k lines?
 Do they really care about being able to zoom in the `dygraph` so that they can see the point at a minute scale?
 To what extent does the app has to be fast?
+
 Asking these questions is important, because building interactive widgets makes the app a little bit slower, and shoving a series of unnecessary widgets will make the user experience worse, adding more cognitive load than necessary.
 The speed of execution of your app is also an important parameter for your application: getting a sense about the need for speed in your application will allow you to judge whether or not you will have to focus on optimizing code execution.
 
@@ -112,12 +113,12 @@ On top of that, remember all these things we have seen in the last chapter about
 
 ### Pre-existing code-base
 
-From time to time, you are building a Shiny app on top of an existing code-base: either scripts with business logic, a package if you are lucky, or a POC for a Shiny app.
+From time to time, you are building a Shiny app on top of an existing code-base: either scripts with business logic, a package if you are lucky, or a PoC for a Shiny app.
 
 These kind of projects are often referred to as "brownfield projects", in opposition to "greenfield projects", borrowing the terminology from urban planning: a greenfield project being one where you are building on "evergreen" lands, while a brownfield project is building on lands that were, for example, industrial lands, and which will need to be sanitized, as they potentially contain waste or pollution, constructions need to be destroyed, roads needs to be deviated, and all these things that can make the urban planning process more complex. 
 Then, you can extend this to software engineering, where a greenfield project is the one that start from scratch, and a brownfield project is a one where you need to build on top of an existing code-base, implying that you will need to do some extra work before actually working on the project: 
 
-> "When transforming brownfield projects, we may face significant impediments and problems, especially when no automated testing exists, or when there is a tightly-coupled architecture that prevents small teams from developing, testing, and deploying code independtly."
+> "When transforming brownfield projects, we may face significant impediments and problems, especially when no automated testing exists, or when there is a tightly-coupled architecture that prevents small teams from developing, testing, and deploying code independently."
 
 `r right_link("The DevOps Handbook", "https://itrevolution.com/book/the-devops-handbook/")`
 
@@ -144,11 +145,11 @@ There are so many considerations about deployment that it will be very hard to l
 Of course, it is more or less solved if you are deploying with Docker: if it works in a container on your machine, it should work in production, but that is not as simple as that: for example, building a Shiny application that will be used by 10 people is not the same as building an application that needs to scale to 50.000 users. 
 Learning at the end of the project that "now we need to scale to a very large user base" might prevent the deployment from being successful, as this kind of scale implies specific consideration while building.
 
-But that is just the tip of the iceberg. 
-One time, we built an app that had to do some API requests.  
-So far so good, nothing too complicated... until we discovered that the server where the app will be deployed does not have access to the internet, making it impossible to issue API requests from the server.
-Here, the containers worked on our machine, as they had access to the internet. 
-Once deployed, the app stopped working, and we lose a couple of days of exchanges with the client, trying to debug our API calls, until we realized that the issue was not with our app, but with the server itself. 
+But that is just the tip of the iceberg of things that can happen. 
+Let's stop for a little story: once upon a time, a team of developer was missioned to build an app, and one feature of the app was to do some API requests.  
+So far so good, nothing too complicated... until they discovered that the server where the app will be deployed does not have access to the internet, making it impossible to issue API requests from the server.
+Here, the containers worked on the dev machines, as they had access to the internet. 
+Once deployed, the app stopped working, and the team lost a couple of days of exchanges with the client, trying to debug our API calls, until they realized that the issue was not with the app, but with the production server itself: and nobody in the team, be it the developers nor the client, though about asking the question of internet access for the server.
 
 It's even more important to think about the IT side of your application, as the people writing specs and interacting with you might come from the Data Science team, and they might or might not have discussed with the IT team about deploying the app. 
 There is a chance that they do not have in mind all what is needed to deploy a Shiny App on their company server. 
