--- a/08-css.Rmd
+++ b/08-css.Rmd
@@ -34,7 +34,7 @@ Compare:
 
 (no `fluidPage`)
 
-```{r 08-css-1 }
+```{r 08-css-1 , eval = FALSE}
 library(shiny)
 ui <- function(request){
   tagList(
@@ -56,9 +56,11 @@ server <- function(
 shinyApp(ui, server)
 ```
 
+![](img/no-css-shiny.png)
+
 to (with `fluidPage`):
 
-```{r 08-css-2 }
+```{r 08-css-2, eval = FALSE}
 library(shiny)
 ui <- function(request){
   fluidPage(
@@ -79,6 +81,9 @@ server <- function(
 
 shinyApp(ui, server)
 ```
+
+
+![](img/css-shiny.png)
 
 Yes, that is subtle, but you can see how it makes the difference on larger apps.
 
@@ -146,7 +151,7 @@ Note that the good practice is considered to be the integration of an external f
 
 If you need to add style to one specific element, you can write it straight inside the HTML tag:
 
-```{r 08-css-3 }
+```{r 08-css-3, eval = FALSE }
 library(shiny)
 ui <- function(request){
   tagList(
@@ -164,6 +169,8 @@ server <- function(
 
 shinyApp(ui, server)
 ```
+
+![](img/css-red.png)
 
 But this method loses all the advantages of CSS, notably the possibility to apply style to multiple elements. 
 Use it with caution.
@@ -198,6 +205,8 @@ server <- function(
 shinyApp(ui, server)
 ```
 
+![](img/css-red.png)
+
 This works, but should not be considered as the best option: indeed, if you have a large amount of CSS code to insert to your app, it can make the code harder to read as it adds a large amount of visual noise.
 
 The best solution then is to go with the alternative of writing the CSS inside a separate file: it allows to separate things and to make the UI code lighter, as it is easier to maintain a separate CSS file than CSS written straight into R code. 
@@ -218,7 +227,7 @@ If you are building your application with `{golem}` [@R-golem], the good news is
 
 ### Using R packages
 
-If you want to use external CSS template, there are several packages that exist that can do implement new custom UI designs for your application. 
+If you want to use external CSS template, there are several packages that exist that can implement new custom UI designs for your application. 
 Here are some: 
 
 + `{resume}`[@R-resume], provides an implementation of the [Bootstrap Resume Template](https://github.com/BlackrockDigital/startbootstrap-resume).
