--- a/09-step-by-step-prototype.Rmd
+++ b/09-step-by-step-prototype.Rmd
@@ -3,9 +3,9 @@
 # Setting up for success with `{golem}`
 
 Before starting to prototype and build anything, initialize a `{golem}` [@R-golem] project! 
-This will help you put your application on solid ground, and once the project is ready to be filled, you can start prototyping right inside it!
+This will help you start your application on solid ground, and once the project is ready to be filled, you can start prototyping right inside it.
 
-The general workflow for "prototype and build" is the following: the project manager sets up a `{golem}` project, where the first steps are filled, the general structure, with Shiny module, is set, and then the project is registered to the version control system. 
+The general workflow for "prototype and build" is the following: the project manager sets up a `{golem}` project, where the first steps are filled, the general structure (potentially with Shiny module) is set, and then the project is registered to the version control system. 
 Once we have this structure, package and modules combined, we can start prototyping the UI inside the module, work on the CSS and JavaScript elements that might be needed, and prototyping the back-end functionalities inside Rmarkdown files. 
 And then, once this two prototyping sides are finished, we work on the integration of everything inside the reactive context.
 
@@ -99,19 +99,10 @@ usethis::use_lifecycle_badge( "Experimental" )
 usethis::use_news_md( open = FALSE )
 ```
 
-It's also where you will be invited to use `git`
+It's also where you will be invited to use `git`:
 
 ```{r 09-step-by-step-prototype-6, eval = FALSE}
 usethis::use_git()
-```
-
-
-### Init Tests
-
-Create a template for tests:
-
-```{r 09-step-by-step-prototype-7, eval = FALSE}
-golem::use_recommended_tests()
 ```
 
 
