--- a/11-step-by-step-build.Rmd
+++ b/11-step-by-step-build.Rmd
@@ -3,7 +3,7 @@
 # Building app with `{golem}` {#stepbuild}
 
 Now that the application is prototyped inside a `{golem}` [@R-golem] skeleton, you can work on its integration. 
-In step of the workflow, you will be linking the back-end and front-end together, and working on the global engineering of the application, _i.e_:
+In this step of the workflow, you will be linking the back-end and front-end together, and working on the global engineering of the application, _i.e_:
 
 + add and organize dependencies
 + creating and including sub-modules if necessary
@@ -165,7 +165,7 @@ Then, you can build all the Vignettes with:
 devtools::build_vignettes()
 ```
 
-### Code Coverage & Continous Integration
+### Code Coverage & Continuous Integration
 
 #### Code Coverage
 
@@ -259,7 +259,7 @@ golem::cat_dev("In dev\n")
 
 Of course, chances are you do not only need to print things, you might want to use other functions. 
 Good news!
-You can make any function being "dev-dependant" with the `make_dev()` function: 
+You can make any function being "dev-dependent" with the `make_dev()` function: 
 
 ```{r 11-step-by-step-build-9, eval = TRUE}
 log_dev <- golem::make_dev(log)
