--- a/14-deploy-with-golem.Rmd
+++ b/14-deploy-with-golem.Rmd
@@ -25,7 +25,7 @@ Here is a quick checklist of things to think about once your application is read
 
 + [ ] (If relevant) The server it is deployed on has all the necessary software installed (Docker, Connect, Shiny Server...) to make the application run
 
-+ [ ] The server has all the system requirements needed (_i.e_ the system libraries), and if not, they are installed with my application (if it's dockerized) 
++ [ ] The server has all the system requirements needed (_i.e_ the system libraries), and if not, they are installed with the application (if it's dockerized) 
 
 + [ ] The application, if deployed on a server, will be deployed on a port which will be accessible by the users
 
@@ -55,7 +55,7 @@ Then, try the `run_app()` function to check that the app can be launched.
 Building an app as a package also means that this app can be bundled into an archive, and then shared, either as is or using a package repository like the CRAN.  
 
 To do that, you first need an bundled version of your app, which can be created using the `build()` function from `{pkgbuild}` [@R-pkgbuild] in the same working directory as your application. 
-Calling this function wîll create a .tar.gz file that is called `mygolem_0.0.1.tar.gz` (of course with the name of your package). 
+Calling this function will create a .tar.gz file that is called `mygolem_0.0.1.tar.gz` (of course with the name of your package). 
 Once you have this `tar.gz`, you can send it to your favorite package repository.
 
 You can also share the file as is with others.
@@ -72,7 +72,7 @@ At the time of writing this book, there are two main ways to deploy a shiny app 
 + Rstudio's solutions
 + A docker based solution
 
-## RStudio Environments
+### RStudio Environments
 
 Rstudio proposes three services to deploy Shiny application : 
 
@@ -91,11 +91,11 @@ Each of these platforms has its own function to create an `app.R` file that is t
 + `golem::add_shinyserver_file()`
 
 What these `app.R` files do is calling a `pkgload::load_all()` function, that will mimic the launch of your package, and then call the `run_app()` function from your packaged app. 
-Note that if you need to configure the way your app is launched on these plateforms (for example if you need to pass arguments to the `run_app()` function), you will have to edit this file. 
+Note that if you need to configure the way your app is launched on these platforms (for example if you need to pass arguments to the `run_app()` function), you will have to edit this file. 
 
 Another way to deploy your `{golem}` based app to Shiny server and to Connect is to link these two software to a local repository (for example an RStudio Package Manager), and then to only use `mypackage::run_app()` to the `app.R`. 
 
-## Docker 
+### Docker 
 
 Docker is an open source software used to build and deploy applications in containers. Docker has become an core solution in the DevOps world and a lot of server solution are based on it.
 See the "Strengthen" chapter for a more complete introduction to Docker. 
