--- a/17-optimizing-shiny-code.Rmd
+++ b/17-optimizing-shiny-code.Rmd
@@ -228,7 +228,7 @@ One other thing to remember is that, just like our computer screen from our phon
 For example, from our stored cache from before:
 
 ```{r 17-optimizing-shiny-code-8 }
-fs::dir_info(tpd)[, "size"]
+fs::dir_info(tpd)[, "size", drop  = FALSE]
 ```
 
 Managing cache at a system level is out of scope for this book, but note that the most commonly accepted rule for deleting cache is called __LRU__, for __Least Recently Used__. 
@@ -242,7 +242,7 @@ res_a <- mfct("SELECT * FROM diams WHERE cut = 'Ideal'", con)
 ```
 
 ```{r 17-optimizing-shiny-code-10 }
-fs::dir_info(tpd)[, "access_time"]
+fs::dir_info(tpd)[, "access_time", drop  = FALSE]
 ```
 
 Hence, when using cache, it might be interesting to periodically removed the oldest used cache, so that you can regain some space on the server running the application. 
