--- a/05-workflow.Rmd
+++ b/05-workflow.Rmd
@@ -75,11 +75,18 @@ In this third part, you will work on the core engine of the application, making 
 
 This step of the workflow is cover in the _Building app with `{golem}`_, a chapter that presents the various functions you can use to build your application, _i.e_ the one you will be using to combine your back-end and front-end.
 
+In this step, we will cover: adding dependencies, organizing modules and functions, adding tests, documenting , and using the internal `dev` functions from `{golem}`.
+
 ## Part 4: Strengthen 
 
 _Strengthening_ your app is ensuring your application is immortal, in the sense that we defined in the first chapter of this book.
 
 In this part, we will go through unit tests, reproducible development environment, version control and continuous integration in the context of Shiny applications.
+Building a solid testing suite is crucial to the success of a project, as it allows a project to be stable on the long run, be it when you will want to add new feature, or refactor existing code: 
+
+> Refactoring requires we be able to confidently ensure that behavior remains identical at every iteration. We can increase our confidence that nothing has changed by writing a suite of tests (unit, integration, end-to-end), and we should not seriously consider moving forward with any refactoring effort until we’ve established sufficient test coverage.
+
+`r right_link("Refactoring at Scale - Maud Lemaire", "https://learning.oreilly.com/library/view/refactoring-at-scale/9781492075523/")`
 
 This step of the workflow will span over two chapters. 
 
@@ -93,7 +100,7 @@ This chapter will also cover `{renv}` and `Docker`, two essential tools for deve
 
 To _Deploy_ is to send your application into production once it is built.
 
-Being exhaustive here would be an impossible task: there are countless ways to make your application accessible to its targeted users, but we will try to cover some basics about this part. 
+Being exhaustive here would be an impossible task: there are countless ways to make your application accessible to its targeted users, but we will try to cover some basics in this part. 
 
 In this part, we will quickly present a series of methods to deploy your application on various environments, notably sharing your application as a package, sending it to an RStudio platform, or building a Docker image to serve your app on a cloud provider. 
 
