--- a/12-step-by-step-secure.Rmd
+++ b/12-step-by-step-secure.Rmd
@@ -73,7 +73,7 @@ If you want to learn more about how to use `{testthat}`, you can refer to the fo
 
 Once you have built a solid test suite for your business logic, another side of your app you might want to check is the interactive logic, i.e. the user interface. 
 
-There are several tools from the web developer world that can be used to do exactly that: mimicking an interactive session where instead of deliberately clicking on the application interface, you let a program do it for you. 
+There are several tools from the web development world that can be used to do exactly that: mimicking an interactive session where instead of deliberately clicking on the application interface, you let a program do it for you. 
 
 #### `puppeteer`
 
@@ -267,7 +267,7 @@ shinycannon shinylogs/recording.log http://localhost:2811 --workers 10 --output-
 
 And now, we have new files inside the folder, corresponding to the session recordings. 
 
-```{r 12-step-by-step-secure-15 }
+```{r 12-step-by-step-secure-15, eval = FALSE}
 fs::dir_tree("shinylogs", recurse = FALSE)
 ```
 
@@ -287,7 +287,7 @@ We now have a data.frame with:
 dplyr::glimpse(shinyload_runs)
 ```
 
-Then, `{shinyloadtest}` comes with a series of plotting functions that can be used to analyse your recording. 
+Then, `{shinyloadtest}` comes with a series of plotting functions that can be used to analyze your recording. 
 Here are some examples:
 
 + `slt_session_duration()` plots the session duration, with the various types of event that takes computation time: JS and CSS load, R computation... 
@@ -488,13 +488,13 @@ To help you achieve that,, we will introduce two tools in the next section: `{re
 How do we make sure the package versions we have installed on our machine stays the same in the production environment? 
 And also, how can we be sure that, working as a team, we will be able to work together using the same package versions? 
 
-From one version to another, functions and behaviors change. 
+From one package version to another, functions and behaviors change. 
 Most of the time, new version means new functions, and new features. 
 But from time to time, a new version means breaking changes. 
 Catching that these new versions cause breaking changes can be hard: either because we do not realize that the version is different, or because debugging the error is difficult, especially in Shiny where the trace-back is very deep. 
 And of course, the moment when we discover the error might not be the perfect time for us, as we might not have enough free time on our calendar to debug the application which has stopped running...
 
-For example, here is an error from a real life error when pushing an app on a shiny-server: 
+For example, here is an error from a real life bug when pushing an app on a shiny-server: 
 
 ``` bash
 root@westeros-vm:/var/log/shiny-server# cat thewall(...).log
@@ -561,11 +561,6 @@ readLines("data-raw/.Rprofile") %>%
 In this example, there is just one call to a script, one located at `renv/activate.R`.
 
 + It creates a `renv.lock` file, which will list all the package dependencies
-
-```{r 12-step-by-step-secure-38, comment="", echo = FALSE}
-readLines("data-raw/renv.lock") %>%
-  glue::as_glue()
-```
 
 As we have initiated an empty project, we do not have any dependencies here. 
 If you run this command in a project that already has scripts and dependencies, `{renv}` will try to locate them all, and add them to this file. 
@@ -762,7 +757,7 @@ At the time of writing these lines, there is no native support of `{renv}` (with
 
 Developers have their own R versions and operating systems.
 If you want to be able to correctly deploy your application, you will use a Docker container.
-Then, why not already developing inside a Docker container having the exact same architecture than the one you will deploy ?  
+Then, why not already developing inside a Docker container having the exact same architecture than the one you will deploy ?
 This is possible to use ["rocker" containers](https://hub.docker.com/r/rocker/r-ver) to build your application inside the container, using the embedded Rstudio Server or directly an exported R console.  
 You can even combine developing in a Docker container with the use of `{renv}`.
 
