--- a/book.bib
+++ b/book.bib
@@ -65,15 +65,12 @@ Eprint = {arXiv:2001.10641},
 
 @book{hadleywickham2019,
  Author = {Hadley Wickham},
- title = {Advanced R, Second Edition (Chapman & Hall/CRC The R Series)},
- description = {Advanced R, Second Edition (Chapman & Hall/CRC The R Series) (Book, 2019)},
+ title = {Advanced R, Second Edition},
+ description = {Advanced R, Second Edition},
  publisher = {Chapman and Hall/CRC},
- interhash = {06d9e4e24182a4cb91e13c6ec2909395},
- intrahash = {70a24051a2cb04d39ffe5baf4c0bb85e},
  year = {2019},
  month = {jun},
- isbn = {0815384572},
- url = {https://www.xarg.org/ref/a/0815384572/}
+ isbn = {0815384572}
 }
 
 @book{colingillespie2017,
@@ -99,4 +96,13 @@ Eprint = {arXiv:2001.10641},
  title = {R Packages}, 
  year = {2020}, 
  url = {https://r-pkgs.org/}
+}
+
+@book{lemaire2020,
+ Author = {Maude Lemaire},
+ title = {Refactoring At Scale} publisher = {Henry Holt},
+ year = {2020},
+ month = {dec},
+ isbn = {9781492075516},
+ url = {https://learning.oreilly.com/library/view/refactoring-at-scale/9781492075523/}
 }
