--- a/index.Rmd
+++ b/index.Rmd
@@ -49,25 +49,33 @@ It will be published in 2020 in the [R Series](https://www.crcpress.com/go/the-r
 
 ## Motivation {-}
 
-This book will not __get you started with Shiny__, nor __talk about how to deploy into production and scale your app__. 
-What we'll see is __the process of building the app__. 
-Why? Lots of blog posts and books talk about starting to use `{shiny}` [@R-shiny] or putting apps in production.
-Very few (if any) talk about this grey area between getting started and pushing into production. 
+This book will not __get you started with Shiny__, nor __talk how to work with Shiny once it is sent to production__. 
+What we'll see is __the process of building an application that will later be sent to production__. 
+Why this topic? Lots of blog posts and books talk about getting started with `{shiny}` [@R-shiny] or about what to do once your application is ready to be sent to production.
+Very few (if any) talk about this area in-between: how to confidently work with Shiny once you know the basics and before you send it to the production environment. 
 
-So this is what this book is going to talk about: building Shiny application. 
-We'll focus on the process, the workflow, and the tools we use at ThinkR when building big Shiny Apps.
+So this is what this book is going to talk about: building robust Shiny applications. 
+We'll focus on the process, the workflow, and the necessary tools for building production-grade Shiny Applications.
 
-Hence, if you are starting to read this book, we assume you have a working knowledge of how to build a small application, and want to know how to go one step further. 
+## Who is this book for {-}
+
+If you are starting to read this book, we assume you have a working knowledge of how to build a small application using `{shiny}`, and want to know how to go one step further. 
+In other words, you already have some knowledge about how `{shiny}` works, are able to build a small working application, and want to know how to build a serious, production-grade application that can be sent to production. 
 
 ## Book structure {-}
 
-+ Part 1 (Building big Shiny Apps) gives a general context about what is a successful Shiny Apps and what challenges arise when you are dealing with a large scale application. 
-It also introduces the `{golem}` [@R-golem] package and more general concept about organising your workflow. 
-This first part will be light on code: you will read more about conceptual ideas and organisation strategy. 
++ Part 1 (Building Successful Shiny Apps) gives a general context about what we mean by "production-grade" and "successful" Shiny Application, and what challenges arise when you are dealing with a large scale application designed for production. 
+In this part, we will define what we mean by "Successful", stress the importance of project management, develop how to structure your project for production, and introduce the `{golem}` [@R-golem] package
+We will finally briefly introduce to our development workflow: a workflow that will be explored in part 2 to 6.
 
-+ Part 2 to 6 describes a series of steps you can take when you want to build a Shiny App, and the tooling associated with each step.
++ Part 2 to 6 explore the workflow for building successful applications.  
+_Step 1: Design_ underlines the centrality of the user experience when engineering an application, emphasizes the importance of designing before coding, and gently introduces to CSS.  
+_Step 2: Prototype_ stresses the importance of prototyping, explores the setting of a `{golem}` based application, and presents `{shinipsum}`, `{fakir}`, and the "Rmd First" development methodology.  
+_Step 3: Build_ explores the building step of the application, _i.e_ the core engineering of the application once the prototyping phase is finished.  
+_Step 4: Strengthen_ explores in depth testing, continuous integration, and version control.  
+_Step 5: Deploy_ develops the various possibilities for preparing your application to be deployed.
 
-+ Part 7 (Optimizing) tackles the question of optimization, first by presenting some common caveats of Shiny Apps, and then showing how to optimize R code, and use JavaScript to lighten R work.
++ Part 7 (Optimizing) tackles the question of optimization, first by introducing the general concepts about optimization, then by presenting some common caveats of Shiny Apps, and then showing how to optimize R code, and how to use JavaScript to lighten R work.
 
 ## About the authors {-}
 
@@ -75,11 +83,11 @@ This first part will be light on code: you will read more about conceptual ideas
 
 Colin FAY works at ThinkR, a french agency focused on everything R-related. 
 
-During the day, he helps companies to take full advantage of the power of R, by providing training (from beginner to expert), tools (packages, web apps...) and infrastructure. His main areas of expertise are data & software engineering, web applications (frontend and backend), and R in production. 
+During the day, he helps companies to take full advantage of the power of R, by building tools (packages, web apps...) and setting up infrastructure. His main areas of expertise are data & software engineering, web applications (front-end and back-end), and R in production. 
 
 During the night, Colin is also an hyperactive open source developer and an open data advocate. You can find a lot of his work on his GitHub account (https://github.com/ColinFay) and on ThinkR's account (https://github.com/thinkr-open).
 
-He is also active in the Data Science community in France, especially in his home town Rennes, where he founded the data-blogging website Data-Bzh.fr, co-founded the Breizh Data Club association, and organises the Breizh Data Club Meetups.  
+He is also active in the Data Science community in France, especially in his home town Rennes, where he co-founded the Breizh Data Club association, and organizes the Breizh Data Club Meetups.  
 
 <li><a href="https://statnmap.com/">Sébastien Rochette</a></li>
 
@@ -94,15 +102,19 @@ passionately trains very diverse learner profiles at R.
 <li><a href="https://twitter.com/CervanGirard">Cervan Girard</a></li>
 
 Cervan is Data Scientist at ThinkR. 
-He is enthusiastic and motivated when it comes to rolling up his sleeves for new challenges. Even if it means venturing dangerously into the depths of R, learning new languages and experimenting outside your comfort zone.
-Nevertheless, it remains reliable, constructive and efficient when it comes to using its skills to train or develop. He also enjoys training learners of all levels in the R language.
+He is enthusiastic and motivated when it comes to rolling up his sleeves for new challenges, even if it means venturing dangerously into the depths of R, learning new languages and experimenting outside your comfort zone.
+Whatever the challenge, he remains reliable, constructive and efficient when it comes to using his skills to train or develop. He also enjoys training learners of all levels in the R language.
 
 ## Want to help? {-}
 
-Any feedbacks on the book is very welcome. 
-Feel free to [open an issue](https://github.com/ThinkR-open/building-shiny-apps-workflow/issues), or to make a PR if you spot a typo (I'm not a native english speaker, so there might be some waiting to be found ;) ).
+Any feedback on the book is very welcome. 
+Feel free to [open an issue](https://github.com/ThinkR-open/building-shiny-apps-workflow/issues), or to make a PR if you spot a typo.
 
 ## Other resources {-}
+
+One single book could not cover everything there is to know about `{shiny}`. 
+Here are some resources you can use in addition to this book.
+You can also find more resources in the bibliography.
 
 ### Getting started with Shiny  {-}
 
@@ -120,12 +132,12 @@ Feel free to [open an issue](https://github.com/ThinkR-open/building-shiny-apps-
 
 ## Disclaimer {-}
 
-Open source is moving (very) fast, and some of the tools described in this book are  still under active development. 
+Open source is moving (very) fast, and some of the tools described in this book are still under active development. 
 But good news! 
-A large portion of this book is about the methodology, and not purely the technology, so even if some of the packages and code described in this book become obsolete, a significant part of what is described in this book will still be relevant. 
+A large portion of this book is about the methodology, and not purely the technology, so even if some of the packages and code sections used in this book can become obsolete, a significant part of what is described in this book will still be relevant. 
 
 When reading this book, remember that they are a "snapshot" of various technologies and packages, which might some day become out of date, have breaking changes, or even disappear.
-We will try to update the online version whenever changes are made to the codebase of the packages used in this book, so feel free to browse the online version. 
+We will try to update the online version whenever changes are made to the packages used in this book, so feel free to browse the online version for the up-to-date information.
 
 The current version of this book has been compiled on:
 
@@ -155,7 +167,7 @@ Function names are formatted in a typewriter font and followed by parentheses (e
 
 Thanks to them for their help on the book!
 
-+ [Liz Roten](https://github.com/eroten){target="_blank"}, for proofreading chapter 1 and helping us with writing advices. 
++ [Liz Roten](https://github.com/eroten){target="_blank"}, for proofreading chapter 1 and helping us with writing advice. 
 + [Dan S. Reznik](https://github.com/dan-reznik){target="_blank"}, for proof-reading the JavaScript chapter.
 + [Harry Anderson](https://github.com/xari){target="_blank"}, for giving feedback on the JavaScript chapter.
 + [Julian Stanley](https://github.com/julianstanley){target="_blank"}, for proof-reading chapter 3. 
